INT-2720: UriTemplate Support for S-WS Transports
Remove deprecation in the WS module

JIRA: https://jira.springsource.org/browse/INT-2720
      https://jira.springsource.org/browse/INT-2530

INT-2720: Polishing after rebase

INT-2720: Add a note to the Reference Manual

Polishing <authorgroup> to avoid extra whitespace before name

INT-2720: Pr comments & polishing

* Revert removed public API
* Revert tabs in What's new
* Change real URL to fake to allow for tests to work off-line
* Add smackx dependency to avoid error messages in logs

--- a/build.gradle
+++ b/build.gradle
@@ -535,6 +535,16 @@ project('spring-integration-ws') {
 		testCompile project(":spring-integration-test")
 		testCompile "stax:stax-api:1.0.1"
 		testCompile "xstream:xstream:1.2.2"
+		testCompile ("org.springframework.ws:spring-ws-support:$springWsVersion") {
+			exclude group: 'org.springframework'
+		}
+		testCompile ("org.springframework:spring-jms:$springVersion") {
+			exclude group: 'org.springframework'
+		}
+		testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1"
+		testCompile "org.igniterealtime.smack:smack:3.2.1"
+		testCompile "org.igniterealtime.smack:smackx:3.2.1"
+		testCompile "javax.mail:mail:1.4.5"
 	}
 
 	// suppress saaj path warnings
