--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include 'spring-integration-jms'
 include 'spring-integration-jmx'
 include 'spring-integration-jpa'
 include 'spring-integration-mail'
+include 'spring-integration-module'
 include 'spring-integration-mongodb'
 include 'spring-integration-redis'
 include 'spring-integration-rmi'
