--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Jan 30 11:22:59 EET 2013
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
+#Thu Apr 11 15:10:59 EDT 2013
 zipStoreBase=GRADLE_USER_HOME
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.5-bin.zip
+distributionPath=wrapper/dists
+distributionBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.4-bin.zip
