--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ subprojects { subproject ->
 		aspectjVersion = '1.6.8'
 		cglibVersion = '2.2'
 		commonsNetVersion = '3.0.1'
+		derbyVersion = '10.9.1.0'
 		easymockVersion = '2.3'
 		groovyVersion = '2.1.0'
 		hamcrestVersion = '1.3'
@@ -294,8 +295,8 @@ project('spring-integration-jdbc') {
 		testCompile project(":spring-integration-test")
 		testCompile "com.h2database:h2:1.3.160"
 		testCompile "hsqldb:hsqldb:1.8.0.10"
-		testCompile "org.apache.derby:derby:10.5.3.0_1"
-		testCompile "org.apache.derby:derbyclient:10.5.3.0_1"
+		testCompile "org.apache.derby:derby:$derbyVersion"
+		testCompile "org.apache.derby:derbyclient:$derbyVersion"
 
 		testCompile "org.powermock:powermock-module-junit4:1.5"
 		testCompile "org.powermock:powermock-api-mockito:1.5"
@@ -348,7 +349,7 @@ project('spring-integration-jpa') {
 		testCompile project(":spring-integration-test")
 		testCompile "com.h2database:h2:1.3.166"
 		testCompile "hsqldb:hsqldb:1.8.0.10"
-		testCompile "org.apache.derby:derby:10.5.3.0_1"
+		testCompile "org.apache.derby:derby:$derbyVersion"
 
 		testCompile "org.hibernate:hibernate-entitymanager:3.6.10.Final"
 		testCompile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.3.2"
